Monthly Maintenance June 2024

--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
 		<link rel="stylesheet" href="./src/css/global.css" crossorigin />
 		<script defer crossorigin type="module" src="./src/js/index.js"></script>
 	</head>
-	<body></body>
+	<body class="flex min-h-screen items-center">
+		<h1 class="mx-auto text-9xl font-semibold">Vite Vanilla JS</h1>
+	</body>
 </html>
