--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="antialiased optimizeLegibility">
+<html lang="en" class="font-display antialiased optimize-legibility">
 	<head>
 		<!-- ESSENTIAL -->
 		<meta charset="utf-8" />
